Сделал ручку /orders, написал доки на нее
