# src/main/java/ru/tbank/zaedu/DTO/PlacedOrdersByClientsResponse.java
@@ -1,7 +1,16 @@
 package ru.tbank.zaedu.DTO;
 
+import lombok.Data;
+
+import java.time.LocalDate;
+
+@Data
 public class PlacedOrdersByClientsResponse {
-
-
-
+    private Long id;
+    private ServiceDTO serviceDTO;
+    private String clientName;
+    private String address;
+    private Long price;
+    private LocalDate dateFrom;
+    private LocalDate dateTo;
 }
