# src/main/java/ru/tbank/zaedu/controller/OrderController.java
@@ -5,8 +5,10 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import ru.tbank.zaedu.DTO.PlacedOrdersByClientsResponse;
+import ru.tbank.zaedu.DTO.ClientsOrdersResponse;
 import ru.tbank.zaedu.service.OrderService;
+
+import java.security.Principal;
 
 @RestController
 @RequestMapping("/orders")
@@ -16,9 +18,9 @@ public class OrderController {
     private final OrderService orderService;
 
     @GetMapping
-    public ResponseEntity<PlacedOrdersByClientsResponse> findPlacedOrdersByClients() {
+    public ResponseEntity<ClientsOrdersResponse> findPlacedOrdersByClients(Principal principal) {
 
-        return ResponseEntity.ok(null);
+        return ResponseEntity.ok(orderService.findPlacedOrdersByClients(principal));
     }
 
 }
